--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -1,104 +1,315 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LogicPals Console — Admin Sign in</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Login — LogicPals</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{--primary:#4F46E5;--bg:#EEF2FF;--card:#fff;--text:#0F172A;--muted:#64748B;--danger:#DC2626;--border:#E2E8F0;}
-    *{box-sizing:border-box;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
-    body{margin:0;min-height:100vh;display:grid;place-items:center;background:radial-gradient(1200px 600px at 20% 20%, #e0e7ff 0%, #f8fafc 50%, #fff 100%)}
-    .card{width:min(540px,92vw);background:var(--card);border:1px solid var(--border);border-radius:18px;box-shadow:0 25px 60px rgba(15,23,42,.12);padding:32px}
-    h1{margin:0 0 6px;font-size:30px;letter-spacing:-.02em;color:var(--text);text-align:center}
-    .sub{margin:0 0 22px;text-align:center;color:var(--muted)}
-    label{display:block;margin:14px 0 6px;color:var(--text);font-weight:700;font-size:13px}
-    input{width:100%;padding:13px 14px;border:1px solid #CBD5E1;border-radius:10px;font-size:16px;outline:none}
-    input:focus{border-color:var(--primary);box-shadow:0 0 0 3px rgba(79,70,229,.15)}
-    button{width:100%;margin-top:18px;padding:13px 14px;border:0;border-radius:10px;background:var(--primary);color:#fff;font-weight:800;font-size:16px;cursor:pointer}
-    button:disabled{opacity:.65;cursor:not-allowed}
-    .status{margin-top:12px;padding:10px 12px;border-radius:10px;border:1px solid var(--border);color:var(--muted);background:#F9FAFB}
-    .err{border-color:#FECACA;background:#FEF2F2;color:var(--danger)}
-    .links{margin-top:16px;text-align:center;color:var(--muted);font-size:14px}
-    .links a{color:var(--primary);text-decoration:none;font-weight:800}
-    .links a:hover{text-decoration:underline}
+    :root { --primary:#2563EB; --bg:#EEF2FF; --card:#fff; --text:#111827; --muted:#6B7280; --line:#E5E7EB; }
+    *{ box-sizing:border-box; }
+    body{
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background: radial-gradient(1200px 600px at 15% 10%, #EDE9FE 0%, rgba(237,233,254,0) 55%),
+                  radial-gradient(900px 500px at 85% 20%, #DBEAFE 0%, rgba(219,234,254,0) 60%),
+                  linear-gradient(180deg, #F8FAFF 0%, #EEF2FF 100%);
+      min-height:100vh; margin:0; padding:32px;
+      display:flex; align-items:center; justify-content:center;
+    }
+    .wrap{ width:100%; max-width:440px; }
+    .brand{ display:flex; align-items:center; gap:12px; margin-bottom:18px; justify-content:center; }
+    .logo{
+      width:44px; height:44px; border-radius:14px;
+      background: linear-gradient(135deg, #7C3AED 0%, #2563EB 55%, #06B6D4 100%);
+      display:flex; align-items:center; justify-content:center;
+      color:#fff; font-weight:800; letter-spacing:.5px;
+      box-shadow:0 10px 30px rgba(37,99,235,.22);
+    }
+    .brand h1{ font-size:18px; margin:0; color:var(--text); }
+    .brand p{ margin:0; color:var(--muted); font-size:12px; }
+
+    .card{
+      background:rgba(255,255,255,.92);
+      border:1px solid rgba(229,231,235,.85);
+      border-radius:20px;
+      box-shadow:0 16px 60px rgba(17,24,39,.12);
+      backdrop-filter: blur(8px);
+      padding:26px;
+    }
+    .title{ margin:0 0 6px 0; color:var(--text); font-size:20px; text-align:center; }
+    .subtitle{ margin:0 0 18px 0; color:var(--muted); font-size:13px; text-align:center; }
+
+    .pill{
+      display:inline-flex; align-items:center; gap:8px;
+      border:1px solid rgba(229,231,235,.9);
+      background:#fff;
+      padding:8px 12px; border-radius:999px;
+      font-size:12px; color:#374151;
+      margin:0 auto 16px auto;
+      width:fit-content;
+    }
+    .dot{ width:8px; height:8px; border-radius:999px; background:#10B981; box-shadow:0 0 0 4px rgba(16,185,129,.15); }
+    .grid{ display:grid; grid-template-columns:1fr; gap:12px; }
+    label{ display:block; font-weight:700; font-size:12px; color:#374151; margin:6px 0; }
+    input{
+      width:100%;
+      border:1px solid var(--line);
+      padding:12px 12px;
+      border-radius:12px;
+      font-size:14px;
+      outline:none;
+      background:#fff;
+    }
+    input:focus{ border-color:#93C5FD; box-shadow:0 0 0 4px rgba(147,197,253,.35); }
+
+    .row{ display:flex; gap:10px; margin-top:14px; }
+    .btn{
+      flex:1;
+      border:1px solid var(--line);
+      background:#fff;
+      color:#111827;
+      padding:12px 14px;
+      border-radius:12px;
+      font-weight:800;
+      cursor:pointer;
+    }
+    .btn.primary{
+      border:none;
+      background: linear-gradient(135deg, #2563EB 0%, #7C3AED 100%);
+      color:#fff;
+      box-shadow:0 10px 28px rgba(37,99,235,.28);
+    }
+    .btn:disabled{ opacity:.65; cursor:not-allowed; }
+
+    .msg{
+      margin-top:12px;
+      display:none;
+      padding:10px 12px;
+      border-radius:12px;
+      font-size:13px;
+      line-height:1.35;
+      border:1px solid;
+      white-space:pre-wrap;
+    }
+    .msg.ok{ display:block; background:#ECFDF5; border-color:#A7F3D0; color:#065F46; }
+    .msg.err{ display:block; background:#FEF2F2; border-color:#FECACA; color:#7F1D1D; }
+
+    .footer{
+      margin-top:14px;
+      display:flex; justify-content:space-between; gap:12px;
+      font-size:12px; color:var(--muted);
+    }
+    .footer a{ color:#2563EB; text-decoration:none; font-weight:700; }
+    .tiny{ font-size:11px; color:#9CA3AF; margin-top:10px; text-align:center; }
   </style>
+
+  <!-- Runtime config injected by Vercel /api/env -->
+  
+  <script src="/assets/js/env-loader.js"></script>
 </head>
 <body>
-  <div class="card">
-    <h1>Admin Sign in</h1>
-    <p class="sub">Sign in to access the LogicPals Console.</p>
+  <div class="wrap">
+    <div class="brand">
+      <div class="logo">LP</div>
+      <div>
+        <h1>LogicPals Admin</h1>
+        <p>Enterprise Admin System</p>
+      </div>
+    </div>
 
-    <form id="form">
-      <label for="email">Email</label>
-      <input id="email" type="email" autocomplete="email" required />
+    <div class="card">
+      <h2 class="title">Sign in</h2>
+      <p class="subtitle">Admin access is enforced by DB roles + RPC gates.</p>
 
-      <label for="password">Password</label>
-      <input id="password" type="password" autocomplete="current-password" required />
+      <div class="pill" id="pill">
+        <span class="dot"></span>
+        <span id="pillText">Ready</span>
+      </div>
 
-      <button id="btn" type="submit" disabled>Loading…</button>
-      <div id="out" class="status">Initializing…</div>
-    </form>
+      <form id="form" class="grid" autocomplete="on">
+        <div>
+          <label for="email">Email</label>
+          <input id="email" type="email" placeholder="admin@logicpals.com" autocomplete="username" required />
+        </div>
+        <div>
+          <label for="password">Password</label>
+          <input id="password" type="password" placeholder="••••••••" autocomplete="current-password" required />
+        </div>
 
-    <div class="links">
-      <a href="/admin.html">← Back to Console</a>
+        <div class="row">
+          <button class="btn primary" id="btnLogin" type="submit">Sign in</button>
+          <button class="btn" id="btnClear" type="button">Clear</button>
+        </div>
+
+        <div class="msg err" id="err"></div>
+        <div class="msg ok" id="ok"></div>
+
+        <div class="footer">
+          <a href="index.html">← Back to Home</a>
+          <a href="admin.html">Go to Admin Console →</a>
+        </div>
+
+        <div class="tiny">
+          Tip: if you were signed out, use refresh (Ctrl+R). Back button is hardened in admin.html.
+        </div>
+      </form>
     </div>
   </div>
 
-  <script type="module" src="/assets/js/env-loader.js"></script>
   <script type="module">
-    const $ = (id) => document.getElementById(id);
-    const out = $('out');
-    const btn = $('btn');
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-    function setOut(msg, isErr=false){
-      out.textContent = msg;
-      out.className = 'status' + (isErr ? ' err' : '');
+    const ALLOWED_ADMIN_ROLES = new Set([
+      "super_admin",
+      "admin_regular",
+      "admin_olympiad",
+      "support_readonly",
+      "admin",
+      "reviewer",
+    ]);
+
+    const pillText = document.getElementById("pillText");
+    const err = document.getElementById("err");
+    const ok = document.getElementById("ok");
+    const form = document.getElementById("form");
+    const btnLogin = document.getElementById("btnLogin");
+    const btnClear = document.getElementById("btnClear");
+    const emailEl = document.getElementById("email");
+    const passEl = document.getElementById("password");
+
+    function showError(message) {
+      err.textContent = message;
+      ok.style.display = "none";
+      err.style.display = "block";
+    }
+    function showOk(message) {
+      ok.textContent = message;
+      err.style.display = "none";
+      ok.style.display = "block";
+    }
+    function setPill(text) { pillText.textContent = text; }
+
+    const env = await window.loadEnv();
+  if (!env) { alert("Config load failed. Please refresh."); return; }
+  const SUPABASE_URL = env.SUPABASE_URL;
+  const SUPABASE_ANON_KEY = env.SUPABASE_ANON_KEY;
+    if (!SUPABASE_URL || !SUPABASE_ANON_KEY) {
+      setPill("Missing config");
+      showError("Missing Supabase config. Ensure /api/env is deployed and SUPABASE_URL + SUPABASE_ANON_KEY are set in Vercel.");
     }
 
-    const qp = new URLSearchParams(location.search);
-    const next = qp.get('next') || '/admin.html';
-
-    async function boot(){
-      try{
-        const client = await window.lpGetClient();
-        btn.disabled = false;
-        btn.textContent = 'Sign in';
-        setOut('Ready.');
-
-        const { data } = await client.auth.getSession();
-        if (data?.session?.user) location.replace(next);
-      } catch(e){
-        btn.disabled = true;
-        btn.textContent = 'Sign in';
-        setOut('Init failed: ' + (e?.message || e), true);
-      }
-    }
-
-    $('form').addEventListener('submit', async (ev) => {
-      ev.preventDefault();
-      btn.disabled = true;
-      btn.textContent = 'Signing in…';
-      setOut('Signing in…');
-
-      try{
-        const client = await window.lpGetClient();
-        const email = $('email').value.trim();
-        const password = $('password').value;
-
-        const { data, error } = await client.auth.signInWithPassword({ email, password });
-        if (error) throw error;
-        if (!data?.session?.user) throw new Error('No session returned');
-
-        setOut('Signed in. Redirecting…');
-        location.replace(next);
-      } catch(e){
-        setOut('Login failed: ' + (e?.message || e), true);
-        btn.disabled = false;
-        btn.textContent = 'Sign in';
+    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
+      auth: {
+        persistSession: true,
+        autoRefreshToken: true,
+        detectSessionInUrl: false,
+        storage: window.localStorage,
       }
     });
 
-    boot();
+    async function fetchMyRole() {
+      const { data, error } = await supabase.rpc("rpc_lp_my_role");
+      if (error) throw error;
+      return data;
+    }
+
+    async function storeAccessToken() {
+      const { data } = await supabase.auth.getSession();
+      const token = data?.session?.access_token || null;
+      if (token) localStorage.setItem("lp_access_token", token);
+    }
+
+    async function hardRedirectToAdmin() {
+      window.location.replace("admin.html");
+    }
+
+    async function enforceAdminGateOrSignOut() {
+      const { data: sess } = await supabase.auth.getSession();
+      const session = sess?.session;
+      if (!session) return { ok: false, reason: "No active session." };
+
+      let role = null;
+      try { role = await fetchMyRole(); }
+      catch (e) {
+        await supabase.auth.signOut();
+        localStorage.removeItem("lp_access_token");
+        return { ok: false, reason: `Role check failed: ${e?.message || e}` };
+      }
+
+      if (!role || !ALLOWED_ADMIN_ROLES.has(role)) {
+        await supabase.auth.signOut();
+        localStorage.removeItem("lp_access_token");
+        return { ok: false, reason: `Not authorized for admin console. Your role is: ${role ?? "none"}` };
+      }
+      return { ok: true, role };
+    }
+
+    (async () => {
+      try {
+        setPill("Checking session…");
+        const gate = await enforceAdminGateOrSignOut();
+        if (gate.ok) {
+          await storeAccessToken();
+          showOk(`Signed in as admin role: ${gate.role}. Redirecting…`);
+          await hardRedirectToAdmin();
+        } else {
+          setPill("Ready");
+          const params = new URLSearchParams(window.location.search);
+          if (params.get("logged_out") === "1") showOk("Signed out successfully.");
+        }
+      } catch (e) {
+        setPill("Error");
+        showError(e?.message || String(e));
+      }
+    })();
+
+    btnClear.addEventListener("click", () => {
+      emailEl.value = "";
+      passEl.value = "";
+      err.style.display = "none";
+      ok.style.display = "none";
+      emailEl.focus();
+    });
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      err.style.display = "none";
+      ok.style.display = "none";
+      btnLogin.disabled = true;
+      btnLogin.textContent = "Signing in…";
+      setPill("Authenticating…");
+
+      try {
+        const email = emailEl.value.trim();
+        const password = passEl.value;
+
+        const { error } = await supabase.auth.signInWithPassword({ email, password });
+        if (error) throw error;
+
+        const gate = await enforceAdminGateOrSignOut();
+        if (!gate.ok) { setPill("Denied"); showError(gate.reason); return; }
+
+        await storeAccessToken();
+        showOk(`Welcome. Role: ${gate.role}. Redirecting…`);
+        setPill("Authorized");
+        await hardRedirectToAdmin();
+
+      } catch (e2) {
+        setPill("Ready");
+        showError(`Login failed: ${e2?.message || e2}`);
+      } finally {
+        btnLogin.disabled = false;
+        btnLogin.textContent = "Sign in";
+      }
+    });
+
+    supabase.auth.onAuthStateChange((event) => {
+      if (event === "SIGNED_OUT") {
+        localStorage.removeItem("lp_access_token");
+        setPill("Signed out");
+      }
+    });
   </script>
 </body>
 </html>
